--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/kamilgeagea/minecraft#readme",
   "dependencies": {
+    "lodash": "^4.17.21",
     "three": "^0.138.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/three": "^0.138.0",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
